Fix textatea overflow

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -16,8 +16,3 @@ nav {
 .form-group {
     margin-bottom: 0.5rem;
 }
-
-textarea {
-    min-height: 38px;
-    overflow: hidden;
-}
