--- a/assets/css/template/new_edit.css
+++ b/assets/css/template/new_edit.css
@@ -2,7 +2,7 @@
 @import './template.css';
 
 #template_text {
-    min-height: 300px;
+    height: 300px;
 }
 
 #text-variable-prototype {
